# hpc-k-means

./: .gitignore  CMakeLists.txt  README.md  compile.sh  cumulative_results.csv  job.sh  overnight.sh  processed_results.csv  run.sh  setup.sh
include/: nvector.hpp  support.hpp
include/cuda/: kmeans.cuh
include/mpi/: kmeans.hpp
include/serial/: kmeans.hpp
scripts/: class_error.py  class_loss.py  data_to_image.py  diff_checker.py  draw_graphs.py  evolution.sh  generate_data.py  image_to_data.py  image_workflow.sh  process_raw.py  results_to_image.py  test_10.sh
serial/include/: kmeans.hpp  support.hpp
serial/src/: kmeans.cpp  main.cpp
src/: nvector.cpp  support.cpp
src/cuda/: kmeans.cu  main.cu
src/mpi/: kmeans.cpp  main.cpp
src/serial/: kmeans.cpp  main.cpp
